<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SystemLogsManagementActivity">

    <include
        layout="@layout/action_bar_app"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/margin_horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rad1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_logs_to_server_and_clear_from_device" />

            <RadioButton
                android:id="@+id/rad2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_logs_from_device_only" />

        </RadioGroup>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_horizontal"
            android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>