<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/lltTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/lab_equipment_inventory_mangement_system"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_horizontal"
            android:src="@drawable/header_logo"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lltFooter"
        android:layout_below="@id/lltTop"
        android:layout_centerInParent="true"
        android:background="@color/screen_background"
        android:gravity="center"
        android:orientation="vertical">

        <!--        <TextView-->
        <!--            style="@style/TextAppearance.MaterialComponents.Subtitle2"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="10dp"-->
        <!--            android:text="@string/lab_equipment_inventory_mangement_system"-->
        <!--            android:textAllCaps="true" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardInventory"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/asset_inventory" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/asset_ninventory"
                            android:textAllCaps="true"
                            android:textColor="@color/orange" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLocate"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/locate_asset" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/locate_nasset"
                            android:textAllCaps="true"
                            android:textColor="@color/orange" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTransfer"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp"
                            android:src="@drawable/transfer_asset" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="5dp"
                            android:text="@string/transfer_assign"
                            android:textAllCaps="true"
                            android:textColor="@color/orange" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSync"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp"
                            android:src="@drawable/data_sync" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Subtitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="5dp"
                            android:text="@string/data_sync_settings"
                            android:textAllCaps="true"
                            android:textColor="@color/orange" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lltFooter"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_horizontal"
        android:text="@string/you_are_logged_in_as" />

    <LinearLayout
        android:id="@+id/lltFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/screen_footer" />

    </LinearLayout>

</RelativeLayout>